
ChangeLog:
----------

0.45
	* Fixes related to Lua version handling
	* Misc build fixes
	* Add set_on_bottom(): move to bottom of stack
	* Change set_on_top() so that it merely raises the window

0.44
	* Default to Lua 5.3, and permit use of other versions
	* Add support for setting and deleting window properties
	* Add get_process_name(), which returns the name of the process
	  owning the window (if possible)
	* Add get_monitor_index() and get_monitor_geometry(); improve
	  monitor index/geometry discovery
	* Add get_window_is_decorated() (which uses the Motif window hints)
	* Alias center() as centre()
	* Extend centre() to allow centring on a given monitor and to allow
	  horizontal or vertical only
	* Extend set_window_position() to allow positioning on a given
	  monitor and control which corner is measured from.
	  (Behaviour with two parameters is unchanged.)
	* Quote the option hyphens in the man page (preventing replacement)
	* Various const & compiler warning (gcc -Wextra) fix-ups
	* Support for UTF-8 strings in window properties
	* Allow replacements for pkg-config at compile time

0.43
	* Update contact adresses
	* Move homepage to nongnu.org

0.42
	* Support window focus / blur events
	* Add example for Awesome window manager
	* Updated French, Italian and Swedish translations

0.41
	* Set a correct version number

0.40
	* Add callback for geometry change
	* Add error string for one or two indata expected
	* Make devilspie2_get_viewport_start return both x
	  and y coordinates
	* Add alternative functionality to set_viewport Now you can set the
	  coordinates to the window if you use two integers as indata
	* New Italian translation, updated Dutch, Japanese and Swedish
	  translations
	* Build flags hardening fixes
	* Allow reading of XA_WINDOW properties

0.39
	* Fix proper flushing of debugging output
	* Some source formatting fixes
	* add get_window_is_pinned function
	* Make buildable with a custom CC like clang

0.38