@@ -172,6 +172,7 @@ register_cfunctions(lua_State *lua)
 #ifdef HAVE_GTK3
 	// wnck_window_get_class_instance_name is only availible on wnck 3 and later
 	lua_register(lua, "get_class_instance_name",c_get_class_instance_name);
+	lua_register(lua, "get_class_group_name", c_get_class_group_name);
 #endif
 
 	lua_register(lua, "focus", c_focus);
